[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tuskledger-mcp"
version = "0.1.0"
description = "MCP server for Tusk Ledger — gives your AI assistant typed access to your local personal finance data."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "BradMorphsters" },
]
keywords = ["mcp", "model-context-protocol", "personal-finance", "tuskledger", "claude", "cursor"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.27.0",
]

[project.scripts]
tuskledger-mcp = "tuskledger_mcp.__main__:main"

[project.urls]
Homepage = "https://www.tuskledger.com"
Repository = "https://github.com/BradMorphsters/tuskledger"
Issues = "https://github.com/BradMorphsters/tuskledger/issues"

[tool.hatch.build.targets.wheel]
packages = ["tuskledger_mcp"]
